# adk-agent-sim

./: .env.example  .gitignore  README.md  pyproject.toml  test.db
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh  setup-env.sh
.github/agents/: copilot-instructions.md  speckit.plan.agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
adk_agent_sim/: __init__.py  controller.py  simulator.py
adk_agent_sim/cli/: app.py
adk_agent_sim/demo/: demo.py
adk_agent_sim/execution/: __init__.py  context_factory.py  tool_runner.py
adk_agent_sim/export/: __init__.py  golden_trace.py
adk_agent_sim/models/: __init__.py  history.py  session.py
adk_agent_sim/ui/: __init__.py  app.py  styles.py
logs/: 0_Check.txt
logs/Check/: 1_Set up job.txt  2_Checkout code.txt  3_Run CI in Dev Container.txt  6_Post Checkout code.txt  7_Complete job.txt  system.txt
notebooks/: tool_discovery.ipynb
prds/: requirements.md
specs/001-core-agent-simulator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-simulator-run/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-e2e-test-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ux-modernization/: data-model.md  plan-fixes.md  plan.md  quickstart.md  research.md  spec.md  tasks-fixes.md  tasks.md
specs/004-devtools-event-renderer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  test_component_screenshots.py  test_event_stream_expansion.py  test_mcp_handling.py  test_simulation.py
tests/integration/: test_simulation_flow.py  test_tool_execution.py
tests/unit/: test_blob_toggle_pills.py  test_cli.py  test_context_factory.py  test_demo.py  test_devtools_tree.py  test_expansion_state.py  test_gallery_engine.py  (+7 more)
(+51 files in other folders)
